--- a/cell01/ex01/piscineweb.html
+++ b/cell01/ex01/piscineweb.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html>
-<body>
-<p style="font-size:50px;text-align:center;"><b>Piscine Web</b></p>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +7,7 @@
     <title>PiscineWeb</title>
 </head>
 <body>
-    
+    <p style="font-size:50px;text-align:center;"><b>Piscine Web</b></p> 
+    <h1>Hello</h1>
 </body>
 </html>
