--- a/cell01/ex01/piscineweb.html
+++ b/cell01/ex01/piscineweb.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <p style="font-size:50px;text-align:center;"><b>Piscine Web</b></p> 
+    <img src="cake.jpg" style="width: 50px;height: auto;">
     <h1>Hello</h1>
 </body>
 </html>
